--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=ecommerce-app-db;Persist Security Info=True;User ID=sa;Password=Admin2019$;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
