--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,5 @@ FodyWeavers.xsd
 /eTickets/Migrations/20221212122202_Order_OrderItem_Added.Designer.cs
 /eTickets/Migrations/20221212122825_Order_OrderItem_Added.Designer.cs
 /eTickets/Migrations/20221212122825_Order_OrderItem_Added.cs
+/eTickets/Migrations/20221212125539_ShoppingCartItems_Added.Designer.cs
+/eTickets/Migrations/20221212125539_ShoppingCartItems_Added.cs
