68 vegig - order view

--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,5 @@ FodyWeavers.xsd
 /eTickets/Migrations/20221212122825_Order_OrderItem_Added.cs
 /eTickets/Migrations/20221212125539_ShoppingCartItems_Added.Designer.cs
 /eTickets/Migrations/20221212125539_ShoppingCartItems_Added.cs
+/eTickets/Migrations/20221212141502_sulibol_itthoniGepre.Designer.cs
+/eTickets/Migrations/20221212141502_sulibol_itthoniGepre.cs
