--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,5 @@ FodyWeavers.xsd
 /eTickets/Migrations/20221214073407_Identity-Added.cs
 /eTickets/Migrations/20221215091157_FizetesnelElszall.Designer.cs
 /eTickets/Migrations/20221215091157_FizetesnelElszall.cs
+/eTickets/Migrations/20221216223658_otthoniGep.Designer.cs
+/eTickets/Migrations/20221216223658_otthoniGep.cs
